fix spacing of service section copywriting

--- a/stylesheets/styles.less
+++ b/stylesheets/styles.less
@@ -110,6 +110,10 @@ section {
     font-weight: bold;
     margin-right: 10px;
   }
+  
+  p {
+    margin-right: 10px;
+  }
 
   .websites, .uid, .webapps {
     color: #ebeae8;
